Run Random Grid Search

--- a/1_FullyConnectedNets.ipynb
+++ b/1_FullyConnectedNets.ipynb
@@ -1733,20 +1733,283 @@
       "\n",
       "Iteration 0/35 -> 0.00%\n",
       "Parameters\n",
-      "\tLearning rate 0.0018526146715892274\n",
+      "\tLearning rate 2.6912934424856474e-05\n",
       "\tRegularization 0.01\n",
       "\tHidden layers [500, 100, 100, 100]\n",
-      "\tDropout: 0.18397831848336735\n",
+      "\tDropout: 0.1378654588770541\n",
       "\n",
       "Epoch\tTrain Loss\tTrain accuracy\t\tTest Loss\tTest accuracy\tDuration\n",
       "=====================================================================================================\n",
-      "1\t0.07929\t\t28.90%\t\t\t3.20340\t\t27.20%\t\t5.272\n",
-      "2\t2.94067\t\t32.70%\t\t\t2.79974\t\t29.50%\t\t5.327\n",
-      "3\t2.73221\t\t34.70%\t\t\t2.69298\t\t29.10%\t\t5.436\n",
-      "4\t2.57846\t\t36.30%\t\t\t2.58899\t\t29.80%\t\t5.423\n",
-      "5\t2.51669\t\t38.40%\t\t\t2.43805\t\t31.90%\t\t4.990\n",
-      "6\t2.40128\t\t37.10%\t\t\t2.41301\t\t32.50%\t\t4.790\n",
-      "7\t2.33533\t\t34.10%\t\t\t2.39401\t\t33.40%\t\t4.784\n"
+      "1\t0.00852\t\t44.90%\t\t\t4.10166\t\t42.50%\t\t52.513\n",
+      "2\t3.72874\t\t47.60%\t\t\t3.45592\t\t46.60%\t\t54.030\n",
+      "3\t3.26322\t\t48.60%\t\t\t3.15123\t\t48.50%\t\t52.345\n",
+      "4\t3.01480\t\t50.00%\t\t\t2.97406\t\t48.30%\t\t54.045\n",
+      "5\t2.86332\t\t54.60%\t\t\t2.85318\t\t49.80%\t\t52.781\n",
+      "6\t2.73711\t\t56.00%\t\t\t2.79443\t\t50.90%\t\t53.984\n",
+      "7\t2.64505\t\t56.10%\t\t\t2.72134\t\t51.30%\t\t53.031\n",
+      "8\t2.57668\t\t59.70%\t\t\t2.64759\t\t51.40%\t\t52.937\n",
+      "9\t2.51515\t\t54.40%\t\t\t2.61240\t\t52.90%\t\t53.285\n",
+      "10\t2.47312\t\t57.40%\t\t\t2.59010\t\t52.00%\t\t52.140\n",
+      "11\t2.42740\t\t61.60%\t\t\t2.58600\t\t52.50%\t\t53.796\n",
+      "12\t2.40302\t\t62.20%\t\t\t2.56216\t\t53.00%\t\t52.267\n",
+      "13\t2.36520\t\t60.60%\t\t\t2.52518\t\t53.00%\t\t53.795\n",
+      "14\t2.33883\t\t60.70%\t\t\t2.52197\t\t53.50%\t\t52.238\n",
+      "15\t2.32081\t\t61.50%\t\t\t2.49747\t\t52.90%\t\t53.706\n",
+      "16\t2.30022\t\t60.70%\t\t\t2.47105\t\t53.10%\t\t52.101\n",
+      "17\t2.28021\t\t58.20%\t\t\t2.49122\t\t53.30%\t\t52.175\n",
+      "18\t2.27292\t\t60.90%\t\t\t2.46136\t\t54.80%\t\t53.810\n",
+      "19\t2.25032\t\t63.30%\t\t\t2.45819\t\t54.00%\t\t52.142\n",
+      "20\t2.24501\t\t63.00%\t\t\t2.44178\t\t54.00%\t\t53.640\n",
+      "21\t2.23231\t\t64.70%\t\t\t2.40549\t\t53.50%\t\t52.499\n",
+      "22\t2.23186\t\t62.60%\t\t\t2.46681\t\t53.60%\t\t54.189\n",
+      "23\t2.20993\t\t61.60%\t\t\t2.44302\t\t53.50%\t\t52.439\n",
+      "> Early Stopping after 5 epochs of no improvements.\n",
+      "> Restoring params of best model with validation accuracy of:  0.548\n",
+      "=====================================================================================================\n",
+      "----> :) BEST Validation Accuracy:  0.548\n",
+      "\n",
+      "\n",
+      "Iteration 1/35 -> 2.86%\n",
+      "Parameters\n",
+      "\tLearning rate 2.5978451575164477e-05\n",
+      "\tRegularization 0.01\n",
+      "\tHidden layers [100, 100, 100, 100, 100]\n",
+      "\tDropout: 0.23320834838119914\n",
+      "\n",
+      "Epoch\tTrain Loss\tTrain accuracy\t\tTest Loss\tTest accuracy\tDuration\n",
+      "=====================================================================================================\n",
+      "1\t0.00583\t\t34.40%\t\t\t2.80465\t\t32.50%\t\t13.877\n",
+      "2\t2.69283\t\t38.30%\t\t\t2.58781\t\t35.20%\t\t13.922\n",
+      "3\t2.53979\t\t38.20%\t\t\t2.48564\t\t37.00%\t\t14.689\n",
+      "4\t2.44336\t\t40.70%\t\t\t2.42281\t\t38.20%\t\t14.655\n",
+      "5\t2.38096\t\t42.70%\t\t\t2.36685\t\t40.60%\t\t13.998\n",
+      "6\t2.33546\t\t43.10%\t\t\t2.33479\t\t41.70%\t\t13.830\n",
+      "7\t2.28610\t\t44.00%\t\t\t2.26689\t\t43.60%\t\t13.860\n",
+      "8\t2.26174\t\t45.80%\t\t\t2.25647\t\t43.80%\t\t13.810\n",
+      "9\t2.23666\t\t45.90%\t\t\t2.25653\t\t44.30%\t\t13.859\n",
+      "10\t2.22194\t\t42.90%\t\t\t2.21577\t\t44.20%\t\t13.831\n",
+      "11\t2.20283\t\t44.00%\t\t\t2.20518\t\t45.20%\t\t13.811\n",
+      "12\t2.19055\t\t45.60%\t\t\t2.16557\t\t45.80%\t\t15.464\n",
+      "13\t2.17134\t\t46.40%\t\t\t2.19613\t\t44.90%\t\t13.848\n",
+      "14\t2.16203\t\t46.10%\t\t\t2.18805\t\t45.00%\t\t13.811\n",
+      "15\t2.15485\t\t45.30%\t\t\t2.15138\t\t45.00%\t\t13.799\n",
+      "16\t2.14379\t\t44.70%\t\t\t2.16836\t\t45.10%\t\t13.860\n",
+      "17\t2.13674\t\t46.70%\t\t\t2.11614\t\t45.60%\t\t13.732\n",
+      "> Early Stopping after 5 epochs of no improvements.\n",
+      "> Restoring params of best model with validation accuracy of:  0.458\n",
+      "=====================================================================================================\n",
+      "\n",
+      "\n",
+      "Iteration 2/35 -> 5.71%\n",
+      "Parameters\n",
+      "\tLearning rate 9.40524541090423e-06\n",
+      "\tRegularization 0.01\n",
+      "\tHidden layers [100, 100, 100, 100, 100]\n",
+      "\tDropout: 0.2670491787289132\n",
+      "\n",
+      "Epoch\tTrain Loss\tTrain accuracy\t\tTest Loss\tTest accuracy\tDuration\n",
+      "=====================================================================================================\n",
+      "1\t0.00659\t\t26.00%\t\t\t3.17616\t\t24.10%\t\t13.767\n",
+      "2\t3.12992\t\t27.90%\t\t\t3.07088\t\t26.30%\t\t13.875\n",
+      "3\t3.03510\t\t31.30%\t\t\t2.98410\t\t28.80%\t\t14.780\n",
+      "4\t2.96476\t\t31.20%\t\t\t2.92273\t\t29.20%\t\t14.579\n",
+      "5\t2.90972\t\t31.80%\t\t\t2.86204\t\t29.70%\t\t13.827\n",
+      "6\t2.86317\t\t33.10%\t\t\t2.84276\t\t30.50%\t\t13.857\n",
+      "7\t2.82928\t\t34.10%\t\t\t2.80830\t\t31.80%\t\t13.756\n",
+      "8\t2.79140\t\t33.90%\t\t\t2.76764\t\t31.70%\t\t13.795\n",
+      "9\t2.76646\t\t32.30%\t\t\t2.74912\t\t32.60%\t\t13.766\n",
+      "10\t2.74701\t\t35.00%\t\t\t2.71606\t\t32.40%\t\t13.800\n",
+      "11\t2.72695\t\t35.90%\t\t\t2.70238\t\t32.80%\t\t13.793\n",
+      "12\t2.71101\t\t33.30%\t\t\t2.68436\t\t33.20%\t\t15.406\n",
+      "13\t2.69529\t\t35.50%\t\t\t2.67650\t\t33.00%\t\t13.922\n",
+      "14\t2.68140\t\t33.30%\t\t\t2.67117\t\t33.60%\t\t13.812\n",
+      "15\t2.66990\t\t36.00%\t\t\t2.66251\t\t33.50%\t\t13.814\n",
+      "16\t2.66287\t\t38.50%\t\t\t2.65042\t\t33.50%\t\t13.859\n",
+      "17\t2.65754\t\t38.60%\t\t\t2.63791\t\t33.50%\t\t13.813\n",
+      "18\t2.64011\t\t37.10%\t\t\t2.62676\t\t33.40%\t\t13.765\n",
+      "19\t2.63887\t\t36.60%\t\t\t2.62975\t\t33.30%\t\t13.814\n",
+      "> Early Stopping after 5 epochs of no improvements.\n",
+      "> Restoring params of best model with validation accuracy of:  0.336\n",
+      "=====================================================================================================\n",
+      "\n",
+      "\n",
+      "Iteration 3/35 -> 8.57%\n",
+      "Parameters\n",
+      "\tLearning rate 5.127864204998602e-05\n",
+      "\tRegularization 0.01\n",
+      "\tHidden layers [100, 100, 100, 100]\n",
+      "\tDropout: 0.7379719277537512\n",
+      "\n",
+      "Epoch\tTrain Loss\tTrain accuracy\t\tTest Loss\tTest accuracy\tDuration\n",
+      "=====================================================================================================\n",
+      "1\t0.00603\t\t20.40%\t\t\t2.86598\t\t24.50%\t\t14.374\n",
+      "2\t2.77025\t\t22.20%\t\t\t2.67238\t\t24.60%\t\t14.155\n",
+      "3\t2.61036\t\t19.10%\t\t\t2.54077\t\t22.40%\t\t13.392\n",
+      "4\t2.50663\t\t18.50%\t\t\t2.45991\t\t21.90%\t\t13.320\n",
+      "5\t2.43736\t\t21.00%\t\t\t2.40440\t\t21.00%\t\t13.382\n",
+      "6\t2.39119\t\t19.90%\t\t\t2.37175\t\t20.80%\t\t13.378\n",
+      "7\t2.35597\t\t23.00%\t\t\t2.34237\t\t20.40%\t\t13.311\n",
+      "> Early Stopping after 5 epochs of no improvements.\n",
+      "> Restoring params of best model with validation accuracy of:  0.246\n",
+      "=====================================================================================================\n",
+      "\n",
+      "\n",
+      "Iteration 4/35 -> 11.43%\n",
+      "Parameters\n",
+      "\tLearning rate 0.003588885104452499\n",
+      "\tRegularization 0.01\n",
+      "\tHidden layers [100, 100, 100, 100]\n",
+      "\tDropout: 0.4527715470339908\n",
+      "\n",
+      "Epoch\tTrain Loss\tTrain accuracy\t\tTest Loss\tTest accuracy\tDuration\n",
+      "=====================================================================================================\n",
+      "1\t0.00497\t\t26.20%\t\t\t2.50230\t\t24.00%\t\t13.362\n",
+      "2\t2.40545\t\t27.20%\t\t\t2.32572\t\t25.10%\t\t13.889\n",
+      "3\t2.34732\t\t28.60%\t\t\t2.33620\t\t26.80%\t\t15.109\n",
+      "4\t2.29932\t\t27.70%\t\t\t2.23795\t\t24.80%\t\t13.438\n",
+      "5\t2.26283\t\t29.90%\t\t\t2.24991\t\t28.40%\t\t13.264\n",
+      "6\t2.22976\t\t26.80%\t\t\t2.20056\t\t27.00%\t\t13.346\n",
+      "7\t2.20124\t\t30.80%\t\t\t2.16570\t\t29.40%\t\t13.303\n",
+      "8\t2.18301\t\t28.80%\t\t\t2.18472\t\t29.20%\t\t13.400\n",
+      "9\t2.16140\t\t30.60%\t\t\t2.14038\t\t29.70%\t\t13.344\n",
+      "10\t2.14187\t\t30.90%\t\t\t2.13094\t\t30.70%\t\t13.341\n",
+      "11\t2.12959\t\t33.90%\t\t\t2.11403\t\t34.60%\t\t13.566\n",
+      "12\t2.09989\t\t35.70%\t\t\t2.05531\t\t36.70%\t\t14.904\n",
+      "13\t2.07877\t\t35.50%\t\t\t2.03966\t\t37.40%\t\t13.377\n",
+      "14\t2.05975\t\t36.70%\t\t\t2.06657\t\t36.90%\t\t13.374\n",
+      "15\t2.04358\t\t40.30%\t\t\t1.99512\t\t38.00%\t\t13.406\n",
+      "16\t2.02214\t\t39.90%\t\t\t2.02415\t\t40.00%\t\t13.406\n",
+      "17\t2.00065\t\t39.40%\t\t\t1.96341\t\t39.70%\t\t13.408\n",
+      "18\t1.97124\t\t43.80%\t\t\t1.96669\t\t39.90%\t\t13.375\n",
+      "19\t1.96150\t\t40.60%\t\t\t1.93231\t\t42.10%\t\t13.522\n",
+      "20\t1.93232\t\t43.60%\t\t\t1.93170\t\t42.50%\t\t13.866\n",
+      "21\t1.92311\t\t42.70%\t\t\t1.91770\t\t41.00%\t\t14.593\n",
+      "22\t1.89923\t\t42.40%\t\t\t1.87741\t\t43.00%\t\t13.406\n",
+      "23\t1.88294\t\t41.90%\t\t\t1.87739\t\t44.00%\t\t13.471\n",
+      "24\t1.86770\t\t44.50%\t\t\t1.87865\t\t45.10%\t\t13.374\n",
+      "25\t1.84775\t\t45.80%\t\t\t1.81273\t\t44.90%\t\t13.391\n",
+      "26\t1.82784\t\t45.70%\t\t\t1.82431\t\t45.50%\t\t13.409\n",
+      "27\t1.81744\t\t45.80%\t\t\t1.82658\t\t45.00%\t\t13.549\n",
+      "28\t1.80371\t\t48.10%\t\t\t1.82400\t\t44.20%\t\t14.011\n",
+      "29\t1.78166\t\t49.50%\t\t\t1.77278\t\t45.70%\t\t14.350\n",
+      "30\t1.77032\t\t50.50%\t\t\t1.79861\t\t47.00%\t\t14.729\n",
+      "31\t1.75157\t\t50.10%\t\t\t1.73375\t\t46.70%\t\t13.704\n",
+      "32\t1.74548\t\t47.70%\t\t\t1.76694\t\t47.10%\t\t13.735\n",
+      "33\t1.72902\t\t50.60%\t\t\t1.76807\t\t48.10%\t\t13.877\n",
+      "34\t1.71794\t\t52.00%\t\t\t1.77111\t\t47.60%\t\t13.840\n",
+      "35\t1.71849\t\t50.60%\t\t\t1.73311\t\t48.30%\t\t13.906\n",
+      "36\t1.69465\t\t50.50%\t\t\t1.73427\t\t48.40%\t\t13.913\n",
+      "37\t1.68740\t\t53.00%\t\t\t1.72696\t\t48.70%\t\t13.949\n",
+      "38\t1.66470\t\t51.10%\t\t\t1.72513\t\t47.90%\t\t15.642\n",
+      "39\t1.66286\t\t50.60%\t\t\t1.70497\t\t51.20%\t\t13.965\n",
+      "40\t1.65262\t\t51.90%\t\t\t1.72224\t\t50.70%\t\t13.972\n",
+      "41\t1.64327\t\t50.80%\t\t\t1.70360\t\t49.80%\t\t13.952\n",
+      "42\t1.62624\t\t51.70%\t\t\t1.70017\t\t50.90%\t\t13.989\n",
+      "43\t1.62785\t\t51.40%\t\t\t1.69460\t\t51.30%\t\t13.965\n",
+      "44\t1.61553\t\t54.00%\t\t\t1.72728\t\t50.90%\t\t14.026\n",
+      "45\t1.61189\t\t57.60%\t\t\t1.66221\t\t49.70%\t\t14.068\n",
+      "46\t1.60805\t\t53.00%\t\t\t1.68080\t\t50.40%\t\t14.995\n",
+      "47\t1.59659\t\t53.90%\t\t\t1.67069\t\t51.40%\t\t14.816\n",
+      "48\t1.59592\t\t55.80%\t\t\t1.66641\t\t51.00%\t\t15.404\n",
+      "49\t1.58175\t\t53.60%\t\t\t1.67460\t\t51.30%\t\t14.440\n",
+      "50\t1.57470\t\t54.60%\t\t\t1.65745\t\t51.20%\t\t14.295\n",
+      "=====================================================================================================\n",
+      "\n",
+      "\n",
+      "Iteration 5/35 -> 14.29%\n",
+      "Parameters\n",
+      "\tLearning rate 6.820259895463281e-05\n",
+      "\tRegularization 0.01\n",
+      "\tHidden layers [600, 500, 400, 300, 200, 100]\n",
+      "\tDropout: 0.4419558254793737\n",
+      "\n",
+      "Epoch\tTrain Loss\tTrain accuracy\t\tTest Loss\tTest accuracy\tDuration\n",
+      "=====================================================================================================\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\t0.00727\t\t32.40%\t\t\t3.59166\t\t31.20%\t\t84.572\n",
+      "2\t3.15697\t\t40.30%\t\t\t2.84536\t\t37.40%\t\t81.093\n",
+      "3\t2.67924\t\t44.00%\t\t\t2.51475\t\t40.80%\t\t83.546\n",
+      "4\t2.43950\t\t42.90%\t\t\t2.34079\t\t43.30%\t\t82.814\n",
+      "5\t2.29000\t\t48.10%\t\t\t2.24087\t\t46.00%\t\t81.766\n",
+      "6\t2.18060\t\t50.60%\t\t\t2.14322\t\t45.90%\t\t82.249\n",
+      "7\t2.10707\t\t51.50%\t\t\t2.07825\t\t47.50%\t\t83.016\n",
+      "8\t2.02968\t\t50.70%\t\t\t2.06264\t\t49.10%\t\t82.720\n",
+      "9\t1.98208\t\t47.50%\t\t\t2.00485\t\t50.10%\t\t80.999\n",
+      "10\t1.92760\t\t51.60%\t\t\t1.97287\t\t49.80%\t\t82.641\n",
+      "11\t1.89638\t\t56.10%\t\t\t1.96707\t\t49.80%\t\t83.096\n",
+      "12\t1.86327\t\t51.50%\t\t\t1.91054\t\t51.20%\t\t81.220\n",
+      "13\t1.83112\t\t57.10%\t\t\t1.89299\t\t51.30%\t\t82.687\n",
+      "14\t1.80268\t\t56.20%\t\t\t1.90586\t\t51.40%\t\t82.980\n",
+      "15\t1.79225\t\t57.10%\t\t\t1.87468\t\t53.80%\t\t81.369\n",
+      "16\t1.76431\t\t54.60%\t\t\t1.82685\t\t52.90%\t\t82.790\n",
+      "17\t1.74150\t\t56.00%\t\t\t1.84861\t\t52.90%\t\t82.716\n",
+      "18\t1.72761\t\t56.00%\t\t\t1.82377\t\t53.00%\t\t81.609\n",
+      "19\t1.71587\t\t60.20%\t\t\t1.81801\t\t53.80%\t\t83.433\n",
+      "20\t1.70292\t\t57.00%\t\t\t1.81181\t\t52.90%\t\t82.589\n",
+      "> Early Stopping after 5 epochs of no improvements.\n",
+      "> Restoring params of best model with validation accuracy of:  0.538\n",
+      "=====================================================================================================\n",
+      "\n",
+      "\n",
+      "Iteration 6/35 -> 17.14%\n",
+      "Parameters\n",
+      "\tLearning rate 2.3488241021221054e-05\n",
+      "\tRegularization 0.01\n",
+      "\tHidden layers [100, 100, 100, 100, 100, 100]\n",
+      "\tDropout: 0.799525270005967\n",
+      "\n",
+      "Epoch\tTrain Loss\tTrain accuracy\t\tTest Loss\tTest accuracy\tDuration\n",
+      "=====================================================================================================\n",
+      "1\t0.00689\t\t12.60%\t\t\t3.24669\t\t12.90%\t\t14.188\n",
+      "2\t3.20072\t\t13.30%\t\t\t3.15320\t\t11.40%\t\t14.122\n",
+      "3\t3.11156\t\t14.50%\t\t\t3.05678\t\t14.50%\t\t14.210\n",
+      "4\t3.03383\t\t17.90%\t\t\t2.98364\t\t15.30%\t\t14.153\n",
+      "5\t2.97151\t\t16.60%\t\t\t2.93241\t\t17.20%\t\t14.530\n",
+      "6\t2.91918\t\t18.70%\t\t\t2.88794\t\t17.10%\t\t15.687\n",
+      "7\t2.87663\t\t17.50%\t\t\t2.83036\t\t17.80%\t\t14.253\n",
+      "8\t2.83858\t\t19.90%\t\t\t2.81642\t\t18.20%\t\t14.205\n",
+      "9\t2.80866\t\t15.60%\t\t\t2.79628\t\t17.30%\t\t14.230\n",
+      "10\t2.78417\t\t17.20%\t\t\t2.74944\t\t17.10%\t\t14.172\n",
+      "11\t2.76206\t\t16.80%\t\t\t2.74747\t\t16.70%\t\t14.173\n",
+      "12\t2.74574\t\t16.10%\t\t\t2.72958\t\t16.80%\t\t14.140\n",
+      "13\t2.72909\t\t17.50%\t\t\t2.70897\t\t16.70%\t\t14.156\n",
+      "> Early Stopping after 5 epochs of no improvements.\n",
+      "> Restoring params of best model with validation accuracy of:  0.182\n",
+      "=====================================================================================================\n",
+      "\n",
+      "\n",
+      "Iteration 7/35 -> 20.00%\n",
+      "Parameters\n",
+      "\tLearning rate 0.0002999958243998172\n",
+      "\tRegularization 0.01\n",
+      "\tHidden layers [500, 100, 100, 100]\n",
+      "\tDropout: 0.7091576561269872\n",
+      "\n",
+      "Epoch\tTrain Loss\tTrain accuracy\t\tTest Loss\tTest accuracy\tDuration\n",
+      "=====================================================================================================\n",
+      "1\t0.00467\t\t23.60%\t\t\t2.27489\t\t25.50%\t\t53.311\n",
+      "2\t2.23759\t\t28.00%\t\t\t2.20243\t\t25.70%\t\t51.875\n",
+      "3\t2.18047\t\t27.70%\t\t\t2.16368\t\t26.90%\t\t53.330\n",
+      "4\t2.13308\t\t27.20%\t\t\t2.11184\t\t28.40%\t\t51.749\n",
+      "5\t2.11260\t\t30.30%\t\t\t2.10914\t\t29.00%\t\t53.468\n",
+      "6\t2.08614\t\t29.90%\t\t\t2.07443\t\t29.20%\t\t51.781\n",
+      "7\t2.06957\t\t32.60%\t\t\t2.05626\t\t29.90%\t\t52.551\n",
+      "8\t2.06045\t\t31.90%\t\t\t2.02203\t\t29.70%\t\t52.588\n",
+      "9\t2.03887\t\t31.50%\t\t\t2.01733\t\t29.60%\t\t51.831\n",
+      "10\t2.02811\t\t34.20%\t\t\t2.01294\t\t29.20%\t\t53.820\n",
+      "11\t2.00992\t\t32.00%\t\t\t2.01708\t\t30.50%\t\t51.742\n",
+      "12\t1.99442\t\t32.60%\t\t\t2.01899\t\t30.00%\t\t53.282\n",
+      "13\t1.98452\t\t30.10%\t\t\t1.97003\t\t30.90%\t\t51.280\n",
+      "14\t1.97145\t\t34.90%\t\t\t1.97244\t\t31.20%\t\t53.202\n",
+      "15\t1.96173\t\t32.90%\t\t\t1.98214\t\t32.00%\t\t51.736\n",
+      "16\t1.95335\t\t33.30%\t\t\t1.94560\t\t31.30%\t\t51.863\n",
+      "17\t1.93818\t\t35.00%\t\t\t1.95703\t\t32.90%\t\t53.261\n",
+      "18\t1.92453\t\t34.50%\t\t\t1.96455\t\t33.20%\t\t53.999\n"
      ]
     }
    ],
@@ -1805,7 +2068,7 @@
     "              dropout=dropout_value,\n",
     "              use_batchnorm=True, reg=regularization)\n",
     "\n",
-    "    solver = Solver(model, small_data,\n",
+    "    solver = Solver(model, data,\n",
     "              num_epochs=50, batch_size=100,\n",
     "              update_rule=update_rule,\n",
     "              early_stopping=5,\n",
