Add questions and retrain model

--- a/2_BatchNormalization.ipynb
+++ b/2_BatchNormalization.ipynb
@@ -588,9 +588,25 @@
     "<div class=\"alert alert-info\">\n",
     "    <h3>Inline Question</h3>\n",
     "    <p>Describe the results of this experiment and try to reason why you got these results.</p>\n",
-    "    <p>**Your answer:** </p>\n",
-    "</div>"
+    "    \n",
+    "</div>\n",
+    "\n",
+    "Over all experiments the batch normalization achieved better results. There a two interessting results:\n",
+    "1. Initially, the training of the batch norm net seems to be quicker / more efficient but later on the baseline catches up a little bit. This might be because the batchnorm model is more robust to initial bad initialization (see 2) and therefore is able to overcome the initialization quicker\n",
+    "\n",
+    "\n",
+    "\n",
+    "2. The batchnorm model seems to be more robust when it comes to weight initialization. There are huge differences in the performance of the baseline model. For some weight scales it works reasonably well and for others it's really bad. The batchnorm doesn't suffer from this. This might be because of the normalization of the layers so if they are initialized with some bad values the network is able to cope with this much quicker than the baseline model."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
