--- a/3_Dropout.ipynb
+++ b/3_Dropout.ipynb
@@ -398,8 +398,19 @@
     "    <h3>Inline Question</h3>\n",
     "    <p>Describe the results of this experiment and try to reason why you got these results.</p>\n",
     "    <p>**Your answer:**</p>\n",
-    "</div>"
+    "</div>\n",
+    "\n",
+    "Dropout reduces overfitting because it randomly switches off / scales the activations. This way the network needs to be more \"general\" because neurons can be switched off. However, this also reduces the capacity of the network so increasing the percentage of affected neurons does not neccessarily improve the overall performance because the network might get to weak to fit the data correctly"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
